--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -18,4 +18,5 @@
 
 ADD_EXECUTABLE        (cylinder   cylinder.cpp)
 ADD_EXECUTABLE        (gravity    gravity.cpp)
-ADD_EXECUTABLE        (drop    drop.cpp)
+ADD_EXECUTABLE        (drop       drop.cpp)
+ADD_EXECUTABLE        (bubble     bubble.cpp)
