--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -21,3 +21,7 @@ ADD_EXECUTABLE        (gravity    gravity.cpp)
 ADD_EXECUTABLE        (drop       drop.cpp)
 ADD_EXECUTABLE        (capi       capi.cpp)
 ADD_EXECUTABLE        (bubble     bubble.cpp)
+ADD_EXECUTABLE        (new_bubble    new_bubble.cpp)
+ADD_EXECUTABLE        (new_capi      new_capi.cpp)
+ADD_EXECUTABLE        (new_cylinder  new_cylinder.cpp)
+ADD_EXECUTABLE        (new_drop      new_drop.cpp)
