--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -21,3 +21,4 @@ ADD_EXECUTABLE        (gravity    gravity.cpp)
 ADD_EXECUTABLE        (drop       drop.cpp)
 ADD_EXECUTABLE        (capi       capi.cpp)
 ADD_EXECUTABLE        (bubble     bubble.cpp)
+ADD_EXECUTABLE        (multicomp  multicomp.cpp)
